--- a/.github/workflows/production_edinify.yml
+++ b/.github/workflows/production_edinify.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js app to Azure Web App - edinify
 on:
   push:
     branches:
-      - main
+      - production
   workflow_dispatch:
 
 jobs:
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'main'
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -51,6 +51,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'edinify'
-          slot-name: 'main'
+          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B8B9F13656A241E18FA702707196F1A2 }}
           package: .
