--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.1.0",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "wbm": "^1.1.16"
   }
 }
