error solving in updateStudent function

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22",
-    "wbm": "^1.1.16"
+    "wbm": "^1.1.16",
+    "winston": "^3.11.0"
   }
 }
