--- a/.github/workflows/nerimanovpro_entesknerimanov.yml
+++ b/.github/workflows/nerimanovpro_entesknerimanov.yml
@@ -22,8 +22,7 @@ jobs:
         run: npm --force install
 
       - name: Build
-        run: |
-          npm run build
+        run:  npm run build
       - name:  Deploy to Static Server
         uses: Azure/static-web-apps-deploy@v1
         with:
