--- a/.github/workflows/production_edinify.yml
+++ b/.github/workflows/production_edinify.yml
@@ -1,6 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-name: Build and deploy Node.js app to Azure Web App - edinify
+name: Build and deploy Node.js app to Azure Web App - edinifyProServer
 
 on:
   push:
@@ -25,7 +23,6 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
@@ -49,7 +46,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'edinify'
+          app-name: 'edinifyProServer'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B8B9F13656A241E18FA702707196F1A2 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_36CB544CAC054E3EB97B7BCDA2A5A96C }}
           package: .
