--- a/.github/workflows/production_edinify.yml
+++ b/.github/workflows/production_edinify.yml
@@ -29,9 +29,6 @@ jobs:
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
@@ -58,7 +55,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'deployement'
+          app-name: 'edinify'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_46EAE2B56AEE4F3CA91CAE9C53329936 }}
           package: .
