adding filters to students and workers

--- a/.github/workflows/main_deployement.yml
+++ b/.github/workflows/main_deployement.yml
@@ -1,12 +1,9 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - edinify
+name: Build and deploy Node.js app to Azure Web App - deployement
 
 on:
   push:
     branches:
-      - production
+      - main
   workflow_dispatch:
 
 jobs:
@@ -55,7 +52,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'edinify'
+          app-name: 'deployement'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_46EAE2B56AEE4F3CA91CAE9C53329936 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AB5F9B0C0A36438A85E7A7626CE49F96 }}
           package: .
