--- a/.github/workflows/production_edinify.yml
+++ b/.github/workflows/production_edinify.yml
@@ -1,9 +1,12 @@
-name: Build and deploy Node.js app to Azure Web App - deployement
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js app to Azure Web App - edinify
 
 on:
   push:
     branches:
-      - main
+      - production
   workflow_dispatch:
 
 jobs:
@@ -52,7 +55,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'deployement'
+          app-name: 'edinify'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AB5F9B0C0A36438A85E7A7626CE49F96 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_46EAE2B56AEE4F3CA91CAE9C53329936 }}
           package: .
